--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-
+management.endpoints.web.exposure.include=*
+management.endpoints.health.show-details= always
+management.tracing.sampling.probability=1.0
